src/assets/main.css
@import "./scrollbar.css";

:deep(*),
:deep(*)::before,
:deep(*)::after {
  box-sizing: border-box;
  margin: 0;
  font-weight: normal;
}

.cryptotron-app {
  min-height: 100%;
  min-width: 100%;
  color: var(--cryptotron-text-primary);
  background: var(--cryptotron-dark-bg);
  background-image:
    linear-gradient(rgba(0, 255, 255, 0.03) 1px, transparent 1px),
    linear-gradient(90deg, rgba(0, 255, 255, 0.03) 1px, transparent 1px);
  background-size: 30px 30px;
  transition:
    color 0.5s,
    background-color 0.5s;
  line-height: 1.6;
  font-family: "Space Mono", monospace;
  font-size: 15px;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  position: relative;
  overflow-x: hidden;
}

:deep(a),
:deep(.green) {
  text-decoration: none;
  color: hsla(160, 100%, 37%, 1);
  transition: 0.4s;
  padding: 3px;
}

@media (hover: hover) {
  :deep(a:hover) {
    background-color: hsla(160, 100%, 37%, 0.2);
  }
}

